--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 This is my app. I am in master.
 I am learing to commit.
+  I have made a change in github and want to import to local repo.
 </body>
 </html>
