On branch feature1

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <title>My App</title>
 </head>
 <body>
-This is my app. I am in master.
-I am learing to commit.
-  I have made a change in github and want to import to local repo.
+This is in branch feature 1..
 </body>
 </html>
